# GiteaPlugin-rs

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  PLAN.md  README.md  docker-compose.yml
.agents/: AGENTS.md
.agents/skills/ai-engineering-tutor/: SKILL.md  learning-progress.md
.agents/skills/claude-devfleet/: SKILL.md
.agents/skills/cost-aware-llm-pipeline/: SKILL.md
.agents/skills/customs-trade-compliance/: SKILL.md
.agents/skills/dmux-workflows/: SKILL.md
.agents/skills/drawio/: SKILL.md
.agents/skills/energy-procurement/: SKILL.md
.agents/skills/everything-claude-code/: SKILL.md
.agents/skills/exa-search/: SKILL.md
.agents/skills/fal-ai-media/: SKILL.md
.agents/skills/gan-style-harness/: SKILL.md
.agents/skills/golang-benchmark/: SKILL.md
.agents/skills/golang-cli/: SKILL.md
.agents/skills/golang-code-style/: SKILL.md
.agents/skills/golang-concurrency/: SKILL.md
.agents/skills/golang-context/: SKILL.md
.agents/skills/golang-continuous-integration/: SKILL.md
.agents/skills/golang-data-structures/: SKILL.md
.agents/skills/golang-database/: SKILL.md
.agents/skills/golang-dependency-injection/: SKILL.md
.agents/skills/golang-dependency-management/: SKILL.md
.agents/skills/golang-design-patterns/: SKILL.md
crates/bridge-logic/: Cargo.toml
crates/bridge-logic/src/: lib.rs  processor.rs
crates/gitea-client/: Cargo.toml
crates/jenkins-client/: Cargo.toml
crates/jenkins-client/src/: client.rs  lib.rs
crates/jenkins-client/tests/: client_tests.rs
crates/webhook-server/: Cargo.toml
crates/webhook-server/src/: main.rs
crates/webhook-server/src/handlers/: gitea_webhook.rs  jenkins_webhook.rs  mod.rs
docs/: C4_ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md
docs/adr/: 0001-rust-middleware-architecture.md  0002-use-rustls-tls.md  0005-event-processor-naming-and-module-structure.md  README.md
scripts/: e2e_real_instructions.sh  test_e2e.sh
(+57 files in other folders)
