[package]
name = "bridge-logic"
version = "0.1.0"
edition = "2021"

[dependencies]
gitea-client = { path = "../gitea-client" }
jenkins-client = { path = "../jenkins-client" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
