[package]
name = "webhook-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

gitea-client = { path = "../gitea-client" }
jenkins-client = { path = "../jenkins-client" }
bridge-logic = { path = "../bridge-logic" }
